Version 2.2
https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.2
--------------------------------------------------------
- Login: Move issue into login directory
- Bugfix: /gtk/gtk-3.0/bookmarks removed from repository
- Hyprland: Prefer dark theme for gtk3 applications e.g., nautilus
- Hyprland: Add keybinding for filemanager.sh SUPER, CTRL, F to start nautilus (if installed) or thunar
- Installation: Add nautilus package to become new default file manager
- Waybar: Add quickstart icon for filemanager.sh
- Waybar: Style improvements

Version 2.1
https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.1
--------------------------------------------------------
- Several bugfixes
- Updates custom waybar module to check available packages for updates (pacman and aur) plus color theme for number of available packages (waybar/modules.json)
- New installupdates script with Timeshift integration. Ask for name for the Timeshift before starting the updates (scripts/installupdates.sh)
- Waybar: Pywal colors for waybar now with relative link into ./cache/wal/ (waybar/style.css)