@@ -30,6 +30,7 @@ exec-once = ~/dotfiles/waybar/launch.sh
 exec-once = ~/dotfiles/scripts/updatewal-swww.sh
 exec-once = dunst
 exec-once = ~/dotfiles/hypr/gtk.sh
+exec-once = ~/dotfiles/scripts/lockscreentime.sh
 
 # ----------------------------------------------------- 
 # Load pywal color file
