@@ -1,0 +1,8 @@
+#/bin/sh
+
+if [ -f "/usr/bin/swayidle" ]; then
+    echo "swayidle is installed."
+    swayidle -w timeout 60 'swaylock -f' timeout 100 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
+else
+    echo "swayidle not installed."
+fi;
